added functionality for retrieving metadata and storing metadata
